--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <ul class="links">
                         <li><a href="/">Home</a></li>
                         
-                        <li><a href="/book_trip.html">Book Trip</a></li>
+                        <li><a href="/book.php">Book Trip</a></li>
                         
                         <li><a href="/admin_login.html">Admin Login</a></li>
                     </ul>
@@ -97,7 +97,7 @@
 
             <div class="container2">
                 <figure>
-                    <img class="imgCity" id="imgHalifax" src=/assets/halifax.jpg>
+                    <img class="imgCity" id="imgHalifax" src="/assets/halifax.jpg">
                     <figcaption id="Halifax">Halifax</figcaption>
                 </figure>
 
